--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -19,6 +19,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
 </Project>
